[package]
name = "fixed-macro-impl"
version = "0.1.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
fixed = "1"
paste = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["parsing", "proc-macro"], default-features = false }
