[package]
name = "fixed-macro-impl"
version = "1.2.0"  # !V
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aldanor/fixed-macro"
documentation = "https://docs.rs/fixed-macro"
description = "Proc-macro implementation for the `fixed-macro` crate."

[lib]
proc-macro = true

[dependencies]
fixed = "1"
paste = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["parsing", "proc-macro"], default-features = false }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
